LightningDev/force-app/main/default/objects/Loans_user__c/Loans_user__c.object-meta.xml
<CustomObject>
    <label>Loan</label>
    <nameField>
        <label>Account name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>