LightningDev/force-app/main/default/objects/Loans_user__c/fields/Applied_date__c.field-meta.xml
<CustomField>
    <fullName>Applied_date__c</fullName>
    <label>Applied date</label>
    <type>Date</type>
</CustomField>