LightningDev/force-app/main/default/objects/Loans_user__c/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <formula>CASE( Type__c,
&apos;EDUCATION&apos;,0.12,
&apos;HOUSING&apos;,0.10,
&apos;PERSONAL&apos;,0.11,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>