LightningDev/force-app/main/default/objects/Loans_user__c/fields/Security__c.field-meta.xml
<CustomField>
    <fullName>Security__c</fullName>
    <label>Security</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assert</fullName>
            </value>
            <value>
                <fullName>Salary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>